--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,6 @@
 PORT = 5000
 
 DB_HOST=localhost
-DB_NAME=sistMinisterio
+DB_NAME=sistFiles
 PORT_DB=27017
 PASS_DB=""
-
-SECRETJWT = This is a secret very secret
